--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.1.13"
+        "@tailwindcss/vite": "^4.1.13",
+        "remixicon": "^4.6.0"
     }
 }
