--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "pnpm": "^10.15.1",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.13",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/daygrid": "^6.1.15"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.13",
